added wwwroot for staticfiles(pictures and such) and DTO

--- a/OrchidServer/OrchidServer.csproj
+++ b/OrchidServer/OrchidServer.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="DTO\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
