--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+# Environment variable files
+.env
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
